# main.go
@@ -74,6 +74,7 @@ func main() {
 		drop := v1.Group("/drops")
 		{
 			drop.POST("/", middlewares.CurrentUserMiddleware(true), controllers.CreateDrop)
+			drop.POST("/:id/comments", middlewares.CurrentUserMiddleware(true), controllers.CommentDrop)
 		}
 
 		group := v1.Group("/groups")
